fixing white-space so it wraps text in chromium not just chrome

--- a/cherry/src/app/components/display/display.component.scss
+++ b/cherry/src/app/components/display/display.component.scss
@@ -27,7 +27,7 @@ $inputs-height: 40vh;
 }
 
 %io-button {
-    white-space: nowrap;
+    white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
     padding: 0 .5vw 0 .5vw;
